--- a/thesis/01-introduction/01-CircuitModel.tex
+++ b/thesis/01-introduction/01-CircuitModel.tex
@@ -18,4 +18,4 @@ designed to implement this model. However, the depth and width of circuits that 
 reliably executed on near-term devices are limited by noise, decoherence, and imperfect
 gate fidelities.
 
-%To avoid creating new page
+{\color{red} FELIP: add some circuit example.}
