--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -72,21 +72,6 @@
 	file = {Accepted Version:/home/fpellicer/Zotero/storage/86A8Y5MV/Albash and Lidar - 2018 - Adiabatic quantum computation.pdf:application/pdf},
 }
 
-@misc{diez-valle_universal_2025,
-	title = {Universal {Resources} for {QAOA} and {Quantum} {Annealing}},
-	url = {http://arxiv.org/abs/2506.03241},
-	doi = {10.48550/arXiv.2506.03241},
-	abstract = {The Quantum Approximate Optimization Algorithm (QAOA) is a variational ansatz that resembles the Trotterized dynamics of a Quantum Annealing (QA) protocol. This work formalizes this connection formally and empirically, showing the angles of a multilayer QAOA circuit converge to universal QA trajectories. Furthermore, the errors in both QAOA circuits and QA paths act as thermal excitations in pseudo-Boltzmann probability distributions whose temperature decreases with the invested resource -- i.e. integrated angles or total time -- and which in QAOA also contain a higher temperature arising from the Trotterization. This also means QAOA and QA are cooling protocols and simulators of partition functions whose target temperature can be tuned by rescaling the universal trajectory. The average cooling power of both methods exhibits favorable algebraic scalings with respect to the target temperature and problem size, whereby in QAOA the coldest temperature is inversely proportional to the number of layers, \$T{\textbackslash}sim 1/p\$, and to the integrated angles -- or integrated interactions in QA.},
-	urldate = {2025-06-11},
-	publisher = {arXiv},
-	author = {Díez-Valle, Pablo and Gómez-Ruiz, Fernando J. and Porras, Diego and García-Ripoll, Juan José},
-	month = jun,
-	year = {2025},
-	note = {arXiv:2506.03241 [quant-ph]},
-	keywords = {Quantum Physics, Condensed Matter - Statistical Mechanics},
-	file = {Preprint PDF:/home/fpellicer/Zotero/storage/NPBD2SY8/Díez-Valle et al. - 2025 - Universal Resources for QAOA and Quantum Annealing.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/JWKCSGWS/2506.html:text/html},
-}
-
 
 @misc{farhi_quantum_2014,
 	title = {A {Quantum} {Approximate} {Optimization} {Algorithm}},
@@ -112,4 +97,53 @@
 	pages                = {337---366},
 	year                 = 1994,
 	month                = dec
+}
+
+@book{nielsen00,
+  added-at = {2010-06-22T17:54:31.000+0200},
+  author = {Nielsen, Michael A. and Chuang, Isaac L.},
+  biburl = {https://www.bibsonomy.org/bibtex/222bf6f3de23faf420214d738924ac21b/mcclung},
+  interhash = {140ce4be72c2994b45286dbaa98d0bd3},
+  intrahash = {22bf6f3de23faf420214d738924ac21b},
+  keywords = {computing information quantum},
+  publisher = {Cambridge University Press},
+  timestamp = {2010-06-22T17:54:31.000+0200},
+  title = {Quantum Computation and Quantum Information},
+  year = 2000
+}
+
+
+@article{hegade_digitized_2021,
+	title = {Digitized {Adiabatic} {Quantum} {Factorization}},
+	volume = {104},
+	issn = {2469-9926, 2469-9934},
+	url = {http://arxiv.org/abs/2105.09480},
+	doi = {10.1103/PhysRevA.104.L050403},
+	abstract = {Quantum integer factorization is a potential quantum computing solution that may revolutionize cryptography. Nevertheless, a scalable and efficient quantum algorithm for noisy intermediate-scale quantum computers looks far-fetched. We propose an alternative factorization method, within the digitized-adiabatic quantum computing paradigm, by digitizing an adiabatic quantum factorization algorithm enhanced by shortcuts to adiabaticity techniques. We find that this fast factorization algorithm is suitable for available gate-based quantum computers. We test our quantum algorithm in an IBM quantum computer with up to six qubits, surpassing the performance of the more commonly used factorization algorithms on the long way towards quantum advantage.},
+	number = {5},
+	urldate = {2025-03-01},
+	journal = {Physical Review A},
+	author = {Hegade, Narendra N. and Paul, Koushik and Albarrán-Arriagada, Francisco and Chen, Xi and Solano, Enrique},
+	month = nov,
+	year = {2021},
+	note = {arXiv:2105.09480 [quant-ph]},
+	keywords = {Condensed Matter - Mesoscale and Nanoscale Physics, Quantum Physics},
+	pages = {L050403},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/SGYWHK5A/Hegade et al. - 2021 - Digitized Adiabatic Quantum Factorization.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/DZ25DQB3/2105.html:text/html;Snapshot:/home/fpellicer/Zotero/storage/YL242QG4/2105.html:text/html},
+}
+
+
+@misc{diez-valle_universal_2025,
+	title = {Universal {Resources} for {QAOA} and {Quantum} {Annealing}},
+	url = {http://arxiv.org/abs/2506.03241},
+	doi = {10.48550/arXiv.2506.03241},
+	abstract = {The Quantum Approximate Optimization Algorithm (QAOA) is a variational ansatz that resembles the Trotterized dynamics of a Quantum Annealing (QA) protocol. This work formalizes this connection formally and empirically, showing the angles of a multilayer QAOA circuit converge to universal QA trajectories. Furthermore, the errors in both QAOA circuits and QA paths act as thermal excitations in pseudo-Boltzmann probability distributions whose temperature decreases with the invested resource -- i.e. integrated angles or total time -- and which in QAOA also contain a higher temperature arising from the Trotterization. This also means QAOA and QA are cooling protocols and simulators of partition functions whose target temperature can be tuned by rescaling the universal trajectory. The average cooling power of both methods exhibits favorable algebraic scalings with respect to the target temperature and problem size, whereby in QAOA the coldest temperature is inversely proportional to the number of layers, \$T{\textbackslash}sim 1/p\$, and to the integrated angles -- or integrated interactions in QA.},
+	urldate = {2025-06-11},
+	publisher = {arXiv},
+	author = {Díez-Valle, Pablo and Gómez-Ruiz, Fernando J. and Porras, Diego and García-Ripoll, Juan José},
+	month = jun,
+	year = {2025},
+	note = {arXiv:2506.03241 [quant-ph]},
+	keywords = {Quantum Physics, Condensed Matter - Statistical Mechanics},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/NPBD2SY8/Díez-Valle et al. - 2025 - Universal Resources for QAOA and Quantum Annealing.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/JWKCSGWS/2506.html:text/html},
 }
