--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -147,3 +147,55 @@
 	keywords = {Quantum Physics, Condensed Matter - Statistical Mechanics},
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/NPBD2SY8/Díez-Valle et al. - 2025 - Universal Resources for QAOA and Quantum Annealing.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/JWKCSGWS/2506.html:text/html},
 }
+
+
+@misc{farhi_quantum_2019,
+	title = {Quantum {Supremacy} through the {Quantum} {Approximate} {Optimization} {Algorithm}},
+	url = {http://arxiv.org/abs/1602.07674},
+	doi = {10.48550/arXiv.1602.07674},
+	abstract = {The Quantum Approximate Optimization Algorithm (QAOA) is designed to run on a gate model quantum computer and has shallow depth. It takes as input a combinatorial optimization problem and outputs a string that satisfies a high fraction of the maximum number of clauses that can be satisfied. For certain problems the lowest depth version of the QAOA has provable performance guarantees although there exist classical algorithms that have better guarantees. Here we argue that beyond its possible computational value the QAOA can exhibit a form of Quantum Supremacy in that, based on reasonable complexity theoretic assumptions, the output distribution of even the lowest depth version cannot be efficiently simulated on any classical device. We contrast this with the case of sampling from the output of a quantum computer running the Quantum Adiabatic Algorithm (QADI) with the restriction that the Hamiltonian that governs the evolution is gapped and stoquastic. Here we show that there is an oracle that would allow sampling from the QADI but even with this oracle, if one could efficiently classically sample from the output of the QAOA, the Polynomial Hierarchy would collapse. This suggests that the QAOA is an excellent candidate to run on near term quantum computers not only because it may be of use for optimization but also because of its potential as a route to establishing quantum supremacy.},
+	urldate = {2025-06-22},
+	publisher = {arXiv},
+	author = {Farhi, Edward and Harrow, Aram W.},
+	month = oct,
+	year = {2019},
+	note = {arXiv:1602.07674 [quant-ph]},
+	keywords = {Quantum Physics},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/ZG5BL58E/Farhi and Harrow - 2019 - Quantum Supremacy through the Quantum Approximate Optimization Algorithm.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/C6N8UIWZ/1602.html:text/html},
+}
+
+
+@article{ho_efficient_2019,
+	title = {Efficient variational simulation of non-trivial quantum states},
+	volume = {6},
+	issn = {2542-4653},
+	url = {http://arxiv.org/abs/1803.00026},
+	doi = {10.21468/SciPostPhys.6.3.029},
+	abstract = {We provide an efficient and general route for preparing non-trivial quantum states that are not adiabatically connected to unentangled product states. Our approach is a hybrid quantum-classical variational protocol that incorporates a feedback loop between a quantum simulator and a classical computer, and is experimentally realizable on near-term quantum devices of synthetic quantum systems. We find explicit protocols which prepare with perfect fidelities (i) the Greenberger-Horne-Zeilinger (GHZ) state, (ii) a quantum critical state, and (iii) a topologically ordered state, with \$L\$ variational parameters and physical runtimes \$T\$ that scale linearly with the system size \$L\$. We furthermore conjecture and support numerically that our protocol can prepare, with perfect fidelity and similar operational costs, the ground state of every point in the one dimensional transverse field Ising model phase diagram. Besides being practically useful, our results also illustrate the utility of such variational ans{\textbackslash}"atze as good descriptions of non-trivial states of matter.},
+	number = {3},
+	urldate = {2025-06-22},
+	journal = {SciPost Physics},
+	author = {Ho, Wen Wei and Hsieh, Timothy H.},
+	month = mar,
+	year = {2019},
+	note = {arXiv:1803.00026 [cond-mat]},
+	keywords = {Condensed Matter - Strongly Correlated Electrons, Quantum Physics},
+	pages = {029},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/ZHAGJ9Q7/Ho and Hsieh - 2019 - Efficient variational simulation of non-trivial quantum states.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/EN6SVVZ2/1803.html:text/html},
+}
+
+
+@misc{anschuetz_variational_2018,
+	title = {Variational {Quantum} {Factoring}},
+	url = {http://arxiv.org/abs/1808.08927},
+	doi = {10.48550/arXiv.1808.08927},
+	abstract = {Integer factorization has been one of the cornerstone applications of the field of quantum computing since the discovery of an efficient algorithm for factoring by Peter Shor. Unfortunately, factoring via Shor's algorithm is well beyond the capabilities of today's noisy intermediate-scale quantum (NISQ) devices. In this work, we revisit the problem of factoring, developing an alternative to Shor's algorithm, which employs established techniques to map the factoring problem to the ground state of an Ising Hamiltonian. The proposed variational quantum factoring (VQF) algorithm starts by simplifying equations over Boolean variables in a preprocessing step to reduce the number of qubits needed for the Hamiltonian. Then, it seeks an approximate ground state of the resulting Ising Hamiltonian by training variational circuits using the quantum approximate optimization algorithm (QAOA). We benchmark the VQF algorithm on various instances of factoring and present numerical results on its performance.},
+	urldate = {2025-06-22},
+	publisher = {arXiv},
+	author = {Anschuetz, Eric R. and Olson, Jonathan P. and Aspuru-Guzik, Alán and Cao, Yudong},
+	month = aug,
+	year = {2018},
+	note = {arXiv:1808.08927 [quant-ph]},
+	keywords = {Quantum Physics},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/KICE5PFA/Anschuetz et al. - 2018 - Variational Quantum Factoring.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/TISSZJNS/1808.html:text/html},
+}
